@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v8r4-pre6
+  {
+    Modules = LHCbDIRAC:v8r4-pre6, LHCbWebDIRAC:v4r2
+    Depends = DIRAC:v6r16-pre11
+    LcgVer = 2016-10-24
+  }
+
   v8r4-pre5
   {
     Modules = LHCbDIRAC:v8r4-pre5, LHCbWebDIRAC:v4r2
